# GWPinLanguageModels

./: README_2.md  pyproject.toml  run_prompting_scenarios.sh  run_training_scenarios.sh
src/: prompt.py  train.py
